# ibus-table-cangjie

./: configure.ac  ibus-table-cangjie.spec.in  splittables.py
icons/: Makefile.am
tables/: Makefile.am  cangjie3_hans.txt  cangjie3_hant.txt  cangjie5_hans.txt  cangjie5_hant.txt  quick3.txt  quick5.txt
