# vim:set ts=4
#
# ibus-table-cangjie - The CangJie for IBus Tables.
#
# Copyright (c) 2008-2009 Yu Yuwei <acevery@gmail.com>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2, or (at your option)
# any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.

icons_DATA = 

if IBUS_TABLE_BUILD_CANGJIE3_HANS
icons_DATA += cangjie3_hans.svg
endif

if IBUS_TABLE_BUILD_CANGJIE3_HANT
icons_DATA += cangjie3_hant.svg
endif

if IBUS_TABLE_BUILD_CANGJIE5_HANS
icons_DATA += cangjie5_hans.svg
endif

if IBUS_TABLE_BUILD_CANGJIE5_HANT
icons_DATA += cangjie5_hant.svg
endif

if IBUS_TABLE_BUILD_QUICK3
icons_DATA += quick3.png
endif

if IBUS_TABLE_BUILD_QUICK5
icons_DATA += quick5.png
endif

icons_DATA += $(NULL)

iconsdir = $(datadir)/ibus-table/icons

EXTRA_DIST = \
	cangjie3_hans.svg \
	cangjie3_hant.svg \
	cangjie5_hans.svg \
	cangjie5_hant.svg \
	quick3.png \
	quick5.png \
	$(NULL)
icons_DATA += $(NULL)

iconsdir = $(datadir)/ibus-table/icons
